--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.5.0",
     "bluebird": "^3.3.1",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "^4.13.4",
     "express-react-views": "^0.10.0",
-    "flex.less": "^1.1.0",
     "less-middleware": "1.0.x",
     "lodash": "^4.3.0",
+    "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
