--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "^2.2.0",
     "jsdom": "^8.0.2",
     "proxyquire": "^1.7.4",
