--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.3.1",
     "debug": "~2.2.0",
     "express": "^4.13.4",
+    "express-autoprefixer": "^4.0.3",
     "express-react-views": "^0.10.0",
     "less-middleware": "1.0.x",
     "lodash": "^4.3.0",
